@@ -17,8 +17,9 @@ ENV MAVEN_HOME=/apache-maven-3.8.1
 ENV PATH=${MAVEN_HOME}/bin:$PATH
 
 RUN cd /EaseSearch-search \
-    && mvn clean install package -Dmaven.test.skip \
-    && jlink --module-path ${JAVA_HOME}/jmods --add-modules java.base,java.compiler,java.datatransfer,java.desktop,java.instrument,java.logging,java.management,java.management.rmi,java.naming,java.net.http,java.prefs,java.rmi,java.scripting,java.se,java.security.jgss,java.security.sasl,java.smartcardio,java.sql,java.sql.rowset,java.transaction.xa,java.xml.crypto,java.xml --output /jre
+    && mvn clean install package -Dmaven.test.skip
+
+RUN cp -r jdk-17.0.7 jre
 
 
 FROM openeuler/openeuler:22.03
